clusters/my-cluster/apps/media/jackett/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jackett-svc
  namespace: media
subsets:
- addresses:
  - ip: "192.168.0.152"
  ports:
  - name: jackett-app
    port: 80
    protocol: TCP
