clusters/my-cluster/apps/media/jackett/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: media
  annotations:
    hajimari.io/icon: game-icons:chest-armor
    hajimari.io/enable: true
    hajimari.io/appName: "Jackett"
    hajimari.io/group: "Media"
spec:
  ingressClassName: traefik
  rules:
  - host: jackett.cleoverse.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett-svc
            port:
              number: 80
